--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                       <li><a>Home</a></li>
                       <li><a>about</a> </li>
-                      <li><a>Item 3</a></li>
+                      <li><a>Destination</a></li>
+                      <li><a>Search</a></li>
                     </ul>
                   </div>
                   <a class="text-2xl font-bold">Ena Paribahan</a>
@@ -42,6 +43,52 @@
                 </div>
               </div>
         </navbar>
+        <!-- hero section started -->
+         <section class="">
+          <div class="hero min-h-screen" style="background-image: url(images/banner.png);">
+            <div class="hero-overlay bg-opacity-50"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="">
+                <h1 class="text-5xl font-bold mb-5">End-to-end travel with <br> <span class="text-[#1DD100]">Ena Paribahan</span> </h1>
+                <p class="">Welcome to Ena Paribahan, where we turn your travel dreams into unforgettable adventures! <br> Your next great adventure awaits! </p>
+                <button class="btn bg-[#1DD100] border-0 font-bold mt-5">Buy Tickets</button>
+              </div>
+            </div>
+          </div>
+         </section>
     </header>
+    <!-- best offer -->
+    <section class="my-10 ">
+      <h1 class="text-3xl font-bold text-center">Best offers for you</h1>
+      <!-- 15 % off -->
+      <div class="flex justify-around">
+      <div  class="flex bg-[#FFBF0FFF] w-[573px]">
+        <div class="">
+          <h1>15% Off</h1>
+          <p>On your next purchase</p>
+          <p>Use by March-2024</p>
+        </div>
+        <div><img class="" src="images/cupon-devider.png" alt=""></div>
+        <div class="">
+          <h1>New15</h1>
+          <p>Coupon code</p>
+        </div>
+      </div>
+
+      <!-- 20 % off -->
+      <div  class="flex bg-[#F78C9CFF] w-[573px]">
+        <div class="">
+          <h1>15% Off</h1>
+          <p>On your next purchase</p>
+          <p>Use by March-2024</p>
+        </div>
+        <div><img class="" src="images/cupon-devider.png" alt=""></div>
+        <div class="">
+          <h1>New15</h1>
+          <p>Coupon code</p>
+        </div>
+      </div>
+    </div>
+    </section>
 </body>
 </html>
