finally done offer section

--- a/index.html
+++ b/index.html
@@ -61,30 +61,30 @@
     <section class="my-10 ">
       <h1 class="text-3xl font-bold text-center">Best offers for you</h1>
       <!-- 15 % off -->
-      <div class="flex justify-around">
-      <div  class="flex bg-[#FFBF0FFF] w-[573px]">
+      <div class="flex justify-around mt-8">
+      <div  class="flex justify-around items-center bg-[#FFBF0FFF] w-[573px] h-[220px]">
         <div class="">
-          <h1>15% Off</h1>
-          <p>On your next purchase</p>
+          <h1 class="text-3xl font-bold">15% Off</h1>
+          <p class="text-xl font-extrabold">On your next purchase</p>
           <p>Use by March-2024</p>
         </div>
         <div><img class="" src="images/cupon-devider.png" alt=""></div>
         <div class="">
-          <h1>New15</h1>
+          <h1 class="text-3xl font-bold">New15</h1>
           <p>Coupon code</p>
         </div>
       </div>
 
       <!-- 20 % off -->
-      <div  class="flex bg-[#F78C9CFF] w-[573px]">
+      <div  class="flex justify-around items-center bg-[#F78C9CFF] w-[573px] h-[220px]">
         <div class="">
-          <h1>15% Off</h1>
-          <p>On your next purchase</p>
+          <h1 class="text-3xl font-bold">20% Off</h1>
+          <p class="textxl font-extrabold">On your next purchase</p>
           <p>Use by March-2024</p>
         </div>
         <div><img class="" src="images/cupon-devider.png" alt=""></div>
         <div class="">
-          <h1>New15</h1>
+          <h1 class="text-3xl font-extrabold">Couple20</h1>
           <p>Coupon code</p>
         </div>
       </div>
