added tickt option

--- a/index.html
+++ b/index.html
@@ -89,6 +89,45 @@
         </div>
       </div>
     </div>
+    <button class="btn mx-auto mt-8 text-green-500 font-extrabold border-[#1DD100] flex ">See More offer</button>
+    </section>
+    <!-- ticket price -->
+    <section class="">
+      <div class="text-center ">
+        <h1 class="text-3xl font-bold ">Ena  Paribahan</h1>
+        <p class="my-5">Our GPS-enabled system allows you to track the exact location of your bus in real-time,<br> so you know exactly when it will arrive at your stop.</p>
+      </div>
+      <div class="flex justify-around">
+        <div class="flex">
+          <div><img src="images/bus-logo.png" alt=""></div>
+          <div>
+            <h1>Ena Paribahan</h1>
+            <p>Coach-0993-WEB ! AC-Business</p>
+          </div>
+          
+        </div>
+        
+        <div>
+            <a class="btn bg-[#1DD1001A] text-[#1DD100]">Bus<img src="images/seat-green.png"></a>
+        </div>
+      </div>
+      <div class="w-[808px] h-[258px] mx-auto space-y-5 my-10 text-[#030712FF]">
+      <div class="flex justify-around">
+        <div class="mt-10">Route</div>
+        <div class="mt-10">Dhaka-Sylhet</div>
+      </div>
+      <hr class="w-[600px] mx-auto border-dashed ">
+      <div class="flex justify-around">
+        <div>Departure Time</div>
+        <div>9:00 PM</div>
+      </div>
+      <hr class="w-[600px] mx-auto border-dashed ">
+      <div class="flex gap-5 mx-auto justify-center">
+        <button class="btn">Boarding Point-Laxmipur</button>
+        <button class="btn">Dropping Point-Bogura</button>
+        <button class="btn">Est.Time-11 Hour</button>
+      </div>
+    </div>
     </section>
 </body>
 </html>
