update all section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <navbar class="">
-            <div class="navbar justify-around bg-base-100">
+            <div class="navbar justify-around  bg-base-100">
                 <div class="">
                   <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -44,7 +44,7 @@
               </div>
         </navbar>
         <!-- hero section started -->
-         <section class="">
+         <section class="mx-20">
           <div class="hero min-h-screen" style="background-image: url(images/banner.png);">
             <div class="hero-overlay bg-opacity-50"></div>
             <div class="hero-content text-center text-neutral-content">
@@ -61,7 +61,7 @@
     <section class="my-10 ">
       <h1 class="text-3xl font-bold text-center">Best offers for you</h1>
       
-      <div class="flex gap-4 mx-40 mt-8">
+      <div class="flex gap-4 mx-20 mt-8">
         <!-- 15 % off -->
       <div  class="flex justify-around items-center bg-[#FFBF0FFF] w-[573px] h-[220px]">
         <div class="">
