finished html or css design

--- a/index.html
+++ b/index.html
@@ -243,13 +243,35 @@
         <h3>Selected Your Seat</h3>
       <hr>
       <div class="mt-3 card w-96 bg-base-100 shadow-xl">
-        <div class="card-body">
-          <h2 class="card-title">Card title!</h2>
-          <p>If a dog chews shoes whose shoes does he choose?</p>
-          <div class="card-actions justify-end">
-            <button class="btn btn-primary">Buy Now</button>
-          </div>
+        <div class="flex justify-around">
+          <p>seat <span class="bg-[#1DD100FF] p-[2px] m-[2px]">0</span></p>
+          <p>class</p>
+          <p>price</p>
         </div>
+        <hr>
+        <div class="flex justify-around">
+          <p>A1</p>
+          <p>economy</p>
+          <p>550</p>
+      </div>
+      
+      <div class="flex justify-around">
+        <p>A2</p>
+        <p>economy</p>
+        <p>550</p>
+    </div>
+    <div class="flex justify-between mx-10">
+      <p>Total Price</p>
+      <p>BDT <span>1100</span></p>
+  </div>
+  <div>
+    <input class="bg-[#FFFFFF] m-4 shadow-xl rounded-md p-3" type="text" placeholder="Have any Coupon ?"> 
+    <button class="btn bg-[#1DD100FF]">Apply</button>
+  </div>
+  <div class="flex justify-between mx-10">
+    <p>Grand Total</p>
+    <p>BDT : <span>1000</span></p>
+  </div>
       </div>
       <p>Passenger Name :</p>
       <input class="rounded-md w-full shadow-md p-5" type="text" placeholder="enter your name ">
