update some issue

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                           <input type="text" placeholder="Enter your name" class="input input-bordered w-full mt-2 font-semibold" />
                       </label>
                       <label for="number" class="  mt-3"><span class="font-bold">Phone Number*</span>
-                          <input type="number" id="input-number" placeholder="Enter your phone number " class="input input-bordered w-full  mt-2 font-semibold" />
-                      </label>
+                        <input type="tel" id="input-number" placeholder="Enter your phone number " class="input input-bordered w-full  mt-2 font-semibold" required />
+                    </label>
                       <label for="email" class=" mt-3"><span class="font-bold">Email ID </span>
                           <input type="text" placeholder=" Enter your email id" class="input input-bordered w-full  mt-2 font-semibold" />
                       </label>
